themes/finna2/less/finna/feed.less
/* ... */
.linked-events-noresults {
    display: flex;
    justify-content: center;
    font-size: 1.2em;
}
.linked-event-content {
    .linked-event-info {
        display: flex;
        color: @gray-light;
        .linked-event-field {
            margin-right: 30px;
        }
    }
    .linked-events-left-col {
        width: 65%;
        float: left;
        margin-top: 20px;
        @media (max-width: @screen-sm-max) {
            width: 100%;
        }
        .linked-event-image {
            margin-top: 20px;
            margin-bottom: 20px;
            max-height: 500px;
        }
        .linked-event-description {
            margin-top: 10px;
        }
        .linked-event-keywords {
            display: flex;
            flex-wrap: wrap;
            color: @gray-mid-light;
            margin-top: 20px;
            .linked-event-keyword {
                margin-right: 30px;
                margin-bottom: 10px;
            }
        }
    }
    .linked-events-right-col {
        width: 30%;
        float: right;
        margin-top: 20px;
        @media (max-width: @screen-sm-max) {
            width: 100%;
        }
        .linked-event-map-info {
            .linked-event-field {
                border-bottom: 1px solid @gray-lighter;
                padding: 5px;
                .fa-envelope {
                    float: left;
                    margin-right: 5px;
                    margin-top: 2px;
                }
            }
        }
        .linked-events-map {
            margin-top: 21px;
            height: 200px;
            width: 350px;
        }
    }
}

finna-feed {
    display: block;
    .feed-content-container {
        display: flex;
        flex-direction: row;
        align-items: center;
        position: relative;
    }
    .carousel-header {
        background: @carousel-header-background;
        display: inline-block;
        padding: @carousel-header-padding;
        color: @carousel-header-color;
    }
    .carousel-hover-title {
        display: flex;
        flex-direction: row;
        float: left;
        font-size: 14px;
        font-weight: 900;
        width: 85%;
        color: @carousel-slide-header-color;
        p {
            margin: 0;
            width: 100%;
        }
        .carousel-more {
            font-size: 1.5em;
            float: right;
            margin-left: auto;
            padding-left: 5px;
            line-height: 14px;
            &.show-link {
                flex: 1;
                text-align: right;
            }
        }
    }
    .carousel-non-touch-device .carousel-hover-title {
        width: 100%;
    }
    .carousel-more.carousel-close {
        position: sticky;
        top: 0;
        width: 100%;
    }
    .carousel-hover-title, .carousel-slide-header p {
        overflow-wrap: break-word;
    }
    .carousel-hover-date {
        font-weight: 300;
        color: @gray-lighter;
    }
    .splide__arrows {
        position: absolute;
        pointer-events: none;
        display: flex;
        justify-content: space-between;
        z-index: 1;
        margin: auto;
        button {
            position: relative;
            width: 20px;
            height: 40px;
            display: flex;
            align-items: center;
            pointer-events: auto;
            border: none;
            background-color: transparent;
            &[disabled] {
                display: none;
            }
        }
    }
    .feed-item-holder {
        height: 100%;
        position: relative;
        display: flex !important;
        .feed-link {
            display: flex;
            height: 100%;
            width: 100%;
        }
    }
    .wrapper {
        display: flex;
        background: @carousel-slider-background;
        justify-content: center;
        align-items: center;
        overflow: hidden;
        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
        }
    }
    .carousel-slide-header {
        p {
            .carousel-date {
                display: block;
                font-weight: 400;
            }
        }
    }
    .carousel-pagination-wrapper {
        display: flex;
        width: 100%;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        .carousel-autoplay, .carousel-block {
            flex: 1;
        }
        .autoplay-button {
            border: none;
            background: none;
            font-size: 20px;
            padding: 0 5px;
            i {
                cursor: pointer;
            }
            &:not(.is-active) {
                .pause-icon {
                    display: none;
                }
            }
        }
        .splide__pagination {
            padding: 5px 0;
            li {
                padding: 5px;
                button {
                    font-size: 1em;
                    line-height: 0;
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    width: 5px;
                    height: 5px;
                    padding: 5px;
                    cursor: pointer;
                    background-color: @gray-mid-light;
                    border: 0;
                    outline: none;
                    border-radius: 50%;
                    &.is-active {
                        background-color: @brand-primary;
                    }
                    &:focus {
                        outline: 2px solid @action-link-color;
                        outline-offset: 3px;
                    }
                }
                @media (min-width: @screen-md) {
                    padding: 8px;
                }
            }
        }
    }
}
/* ... */

